--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/snowflake.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>WinterFell</title>
+  <link rel="preload" href="/src/assets/welcome-background.jpg" as="image" />
 </head>
 
 <body>
