chore: clean up dir & regenerate file tree

--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/png" href="/src/assets/beyzIcon.png" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>WinterFell</title>
+        <link rel="preload" href="/src/assets/welcome2.jpg" as="image" />
+    </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/snowflake.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WinterFell</title>
-  <link rel="preload" href="/src/assets/welcome2.jpg" as="image" />
-</head>
-
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
-</body>
-
+    <body>
+        <div id="root"></div>
+        <script type="module" src="/src/main.tsx"></script>
+    </body>
 </html>
